# sdweld1019

./: .gitignore  APPROVAL_BUTTON_FIXES.md  APPROVAL_SYSTEM_COMPLETE.md  APPROVAL_UI_UPDATES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  FIXES_SUMMARY.md  Git部署到普通目录.md  Git部署指南.md  MEMBERSHIP_FIXES_ROUND2_SUMMARY.md  MEMBERSHIP_FIXES_ROUND3_SUMMARY.md  MEMBERSHIP_FIXES_SUMMARY.md  PPQR_APPROVAL_FIX_SUMMARY.md  PPQR_APPROVAL_ISSUE_SOLUTION.md  QQ_EMAIL_SETUP.md  QUICK_DEPLOY.md  README-部署说明.md  README.md  TEST_APPROVAL_BUTTONS.md  check_ppqr_workflow.sql  create_default_admin.sh  create_ppqr_workflow.py  deploy-first-time.ps1  deploy-to-server.ps1  deploy.sh  docker-compose.yml  fix-ssh-and-upload.ps1  fix_server.sh  init.sql  install_docker.sh  install_docker_on_server.ps1  kill-all-services.bat  restart-all-services.bat  server-key.pem  setup_approval_workflows.sql  smart-restart.bat  temp_openapi.json  upload-config.ps1  (+32 more)
backend/: .env  .env.dev  .env.example  APPROVAL_DEPLOYMENT_SUMMARY.md  APPROVAL_WORKFLOW_DELETE_FIX.md  DASHBOARD_STATS_FIX_REPORT.md  Dockerfile  EMAIL_SMS_SETUP_GUIDE.md  EQUIPMENT_API_FIX_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FUNCTIONALITY_TEST_DOCUMENTATION.md  REGISTRATION_LOGIN_STATUS.md  VERIFICATION_CODE_LOGIN_IMPLEMENTATION.md  add_auto_generated_field.py  add_modules_data_to_pqr.py  add_status_to_pqr.py  add_template_id_to_pqr.py  assign_role_to_user.py  auth_test.py  basic_test.py  check_admin_role.py  check_all_users.py  check_all_users_stats.py  check_company_roles.py  check_dashboard_data.py  check_dashboard_is_active.py  check_enterprise_owner_as_employee.py  check_enterprise_user_tier.py  check_enterprise_workspace.py  check_membership_consistency.py  check_modules_data_column.py  check_owner_employees.py  check_password_issue.py  check_postgres.py  check_pqr_table_structure.py  check_recent_registrations.py  check_shared_library_tables.py  check_tables.py  check_templates.py  check_user_credentials.py  (+138 more)
backend/app/: __init__.py  main.py
backend/docs/: ANNOUNCEMENT_FILTERING.md  (+1 more)
nginx/: README.md  (+1 more)
(+705 files in other folders)
